--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,7 @@
 /* hero section */
 .hero-container {
     position: relative;
+    margin-top: 100px;
 }
 
 .hero-container  img {
